# lattik-studio

./: .gitignore  .npmrc  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml
airflow/dags/: example_dag.py  lattik_dag_renderer.py  spark_app_template.yaml
apps/agent-service/: .env.example  .gitignore  nitro.config.ts  package.json
apps/agent-service/scripts/: generate-agent-manifest.mjs  with-env.mjs
apps/agent-service/src/lib/: auth.ts  db.ts  gitea-client.ts  loop-event-to-ui-chunk.test.ts  loop-event-to-ui-chunk.ts  strict-tool.ts  tool-strictness.test.ts  workflow-runs.ts
apps/agent-service/src/middleware/: auth.ts
apps/agent-service/src/routes/: __wf-agent.post.ts  __wf-ai.post.ts  __wf-chat.post.ts  __wf-pipeline-loop.post.ts  __wf-pipeline.post.ts  __wf-stream.post.ts  __wf.post.ts  chat.post.ts  health.get.ts  whoami.get.ts
apps/agent-service/src/tools/: handback.ts  handoff.ts  read-canvas-state.ts
apps/agent-service/src/workflows/: agent-loop.helpers.test.ts  agent-loop.ts  ai-stream.ts  pipeline-manager-loop.ts  pipeline-manager-run.ts  streaming.ts
apps/agent-worker/: package.json
apps/agent-worker/src/: agent-context.ts  done-checks.ts  index.ts  runtime.ts  task-client.ts
apps/agent-worker/src/agents/: executor.ts  kafka.ts  planner.ts  run-agent.ts
apps/agent-worker/src/tools/: create-iceberg-table.ts  create-kafka-topic.ts  emit-logger-proto.ts  emit-run.ts  emit-task.ts  finish-planning.ts  finish-skill.ts  list-skills.ts  register-protobuf-schema.ts  registry.ts  shared.ts  skill-stubs.ts  start-logger-writer.ts
apps/ingest/: Dockerfile  go.mod  go.sum  main.go
apps/logger-writer/: .dockerignore  Cargo.toml  Dockerfile  build.rs
apps/logger-writer/proto/lattik/logger/v1/: envelope.proto
apps/logger-writer/src/: config.rs  hwm.rs  iceberg_io.rs  iceberg_write.rs  main.rs  proto_envelope.rs  schema.rs  writer.rs
apps/web/: .env.example  next.config.ts  package.json  playwright.config.ts
apps/web/e2e/: .test-state.json  auth.spec.ts  chat.spec.ts  data-architect.spec.ts  fixtures.ts  global-setup.ts  global-teardown.ts  task-stack.spec.ts
apps/web/public/: bg.avif
apps/web/src/: proxy.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/auth/: index.ts
apps/web/src/db/: bootstrap-local-worker.ts  dev-user.ts  index.ts  schema.ts  seed.ts  verify-phase-1.ts  verify-phase-2.ts  verify-phase-3.ts  verify-phase-4.ts  verify-phase-5.ts  verify-phase-6.ts  verify-phase-c.ts
apps/web/src/lib/: log.ts  (+20 more)
docs/: PLAN-duckdb-stitch-extension.md  PLAN-improve-local-setup.md  PLAN-self-hosted-workers.md  PLAN-skill-based-worker-loop.md  PLAN-worker-deployment-and-capabilities.md  README.md  canvas-design-principles.md  canvas-rendering.md  concepts.md  data-model.md  end-to-end-test-plan.md  features.md  lattik-table-stitch.md  local-airflow.md  local-data-lake.md  tech-stack.md
docs/architecture/: PLAN-multi-client-agent-service.md  agent-handoff.md  concepts.md  data-model.md  progressive-disclosure.md
docs/archive/: PLAN-improve-local-setup.md  PLAN-skill-based-worker-loop.md
docs/extensions/: data-analyst.md  pipeline-manager.md
docs/infra/: local-airflow.md  local-data-lake.md  logger-writer.md
k8s/: airflow.yaml  gitea-init.yaml  gitea.yaml  iceberg-rest.yaml  ingest.yaml  kafka.yaml  kind-config.yaml  minio.yaml  namespaces.yaml  postgres.yaml  schema-registry.yaml  spark-example.yaml  spark-rbac.yaml  spark-stitch-test.yaml  trino.yaml
k8s/agent-worker/: Dockerfile
k8s/airflow/: Dockerfile
k8s/logger-writer/: deployment-template.yaml
k8s/spark/: Dockerfile  operator-values.yaml
k8s/spark/drivers/: lattik_driver_utils.py  lattik_table_backfill.py  lattik_table_driver.py  test_stitch_write_path.py
lattik-stitch/: Cargo.toml  Dockerfile  Dockerfile.trino  Makefile  README.md
lattik-stitch/crates/lattik-format-parquet/: Cargo.toml
lattik-stitch/crates/lattik-format-parquet/src/: lib.rs  reader.rs  store.rs  writer.rs
lattik-stitch/crates/lattik-format-parquet/tests/: roundtrip.rs
lattik-stitch/crates/lattik-format-vortex/: Cargo.toml
lattik-stitch/crates/lattik-format-vortex/src/: lib.rs  reader.rs  session.rs  writer.rs
lattik-stitch/crates/lattik-format-vortex/tests/: roundtrip.rs
lattik-stitch/crates/lattik-stitch-core/: Cargo.toml
lattik-stitch/crates/lattik-stitch-core/src/: bucket.rs  error.rs  format.rs  lib.rs  manifest.rs  types.rs
lattik-stitch/crates/lattik-stitch-core/src/stitcher/: indexed.rs  mod.rs  naive.rs
lattik-stitch/crates/lattik-stitch-duckdb/: Cargo.toml
lattik-stitch/crates/lattik-stitch-duckdb/src/: lib.rs  resolve.rs  session.rs
lattik-stitch/crates/lattik-stitch-jni/: Cargo.toml
lattik-stitch/crates/lattik-stitch-jni/src/: lib.rs  session.rs
lattik-stitch/docs/: trino-plugin-build.md
lattik-stitch/java/lattik-spark/: build.gradle.kts  settings.gradle.kts
lattik-stitch/java/lattik-spark/src/main/kotlin/com/eloquio/lattik/spark/: LattikCatalog.kt  LattikScan.kt  LattikScanBuilder.kt  LattikStitchedTable.kt  StitchPartition.kt  StitchPartitionReaderFactory.kt
lattik-stitch/java/lattik-spark/src/main/kotlin/com/eloquio/lattik/stitch/: LattikStitchJni.kt
lattik-stitch/java/lattik-trino/: pom.xml
lattik-stitch/java/lattik-trino/src/main/java/com/eloquio/lattik/stitch/: LattikStitchJni.java
lattik-stitch/java/lattik-trino/src/main/java/com/eloquio/lattik/trino/: LattikColumnHandle.java  LattikConnector.java  LattikConnectorFactory.java  LattikMetadata.java  LattikPageSource.java  LattikPageSourceProvider.java  LattikPlugin.java  LattikSplit.java  LattikSplitManager.java  LattikTableHandle.java  LattikTransactionHandle.java
lattik-stitch/k8s/: spark-stitch-read-test.yaml
lattik-stitch/scripts/: image-build.sh  versions.sh
plan/: agent-marketplace.md  data-architect-extension.md
scripts/: bootstrap-env.mjs  bootstrap.sh  dev-status.mjs  dev.sh  gitea-webhook-secret.sh  preflight.mjs  print-next-steps.mjs  sync-gitea-token.mjs
(+208 files in other folders)
