[package]
name = "lattik-stitch-core"
description = "Core stitch engine: stitcher traits, PK index, bucket alignment, manifest parsing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
xxhash-rust = { workspace = true }
tracing = { workspace = true }
